[package]
name = "input_decoder"
version = "0.1.0"
authors = ["pentamassiv <pentamassiv@posteo.de>"]
edition = "2021"

[dependencies]
path_gen = {git = "https://github.com/grelltrier/path_gen"}
dtw = { git = "https://github.com/grelltrier/dtw"}
knn_dtw = {git = "https://github.com/grelltrier/knn_dtw"}
language_model = {git = "https://github.com/grelltrier/language_model"}